<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_poster">Movie poster</string>
    <string name="error_message">An error has occurred. Please try again.</string>
    <string name="network_error_message">Network unavailable. Check your internet connection.</string>
    <string name="sort_by_popularity_label">Most Popular</string>
    <string name="sort_by_rating_label">Top Rated</string>
    <string name="action_refresh_label">Refresh</string>
    <string name="synopsis_label">Synopsis:</string>
    <string name="rating_label">Rating</string>
    <string name="year_label">Year</string>
    <string name="favourite_button">Favourite button</string>
    <string name="movie_backdrop">Movie backdrop</string>
    <string name="favourites_label">Favourites</string>
    <string name="top_rated_label">Top Rated</string>

</resources>
