<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_backdrop"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/movie_backdrop" />

        <TextView
            android:id="@+id/tv_movie_title"
            style="@style/TextTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:padding="8dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toTopOf="@+id/movie_poster" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="@dimen/image_width_small"
            android:layout_height="@dimen/image_height_small"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_backdrop" />

        <TextView
            style="@style/TextLabelTheme"
            android:text="@string/year_label"
            app:layout_constraintStart_toStartOf="@+id/tv_release_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/tv_release_date"
            style="@style/TextTheme"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/favourites_button" />

        <TextView
            style="@style/TextLabelTheme"
            android:layout_marginTop="8dp"
            android:text="@string/rating_label"
            app:layout_constraintStart_toStartOf="@+id/tv_vote_average"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average" />

        <RatingBar
            android:id="@+id/tv_vote_average"
            style="?android:ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:isIndicator="true"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date"
            app:layout_constraintTop_toTopOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/tv_overview_label"
            style="@style/TextLabelTheme"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/synopsis_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/TextTheme"
            android:layout_marginBottom="4dp"
            android:paddingLeft="@dimen/item_padding_16"
            android:paddingRight="@dimen/item_padding_16"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_label" />

        <ImageButton
            android:id="@+id/favourites_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_star_border_black_36"
            app:layout_constraintStart_toStartOf="@+id/tv_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
            android:contentDescription="@string/favourite_button" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>